--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>This is heading </h1>
+        <h2>this is second heading</h2>
+        <p>this is pera1</p>
     </body>
 </html>
