--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <title>HOME</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>This is heading </h1>
-        <h2>this is second heading</h2>
-        <p>this is pera1</p>
-    </body>
+        <div>
+            <img id="mainImage" src="img.jpg" alt="" height="250" width="412">
+            <div>
+                <img id="img1" src="img1.jpg" alt="" height="100" width="100">
+                <img id="img2" src="img2.jpg" alt="" height="100" width="100">
+                <img id="img3" src="img3.jpg" alt="" height="100" width="100">
+                <img id="img4" src="img4.jpg" alt=""height="100" width="100">
+            </div>
+        </div>
+        <!-- <button type="button" id="homeBtn" >HOME</button>
+        <button type="button" id="aboutBtn">ABOUT</button>
+        <button type="button" id="contactBtn">CONTACT</button>
+        <div class="div-one">
+            <h1 id="heading">This is home heading</h1>
+            <p id="paragraph">this is home paragraph</p> -->
+        </div>
+        <!-- <button type="button" id="redBtn">Red</button>
+        <button type="button" id="greenBtn">Green</button>
+        <button type="button" id= "blueBtn">Blue</button>
+        <button type="button" id="defaultBtn">Default</button>
+        <div id="divOne" class="div-one"></div>
+        <table>
+            <tr>
+                <th>Starting Number </th>
+                <td><input type="number"  id="StartingNumber"></td>
+            </tr>
+            <tr>
+                <th>Ending Number </th>
+                <td><input type="number"  id="EndingNumber"></td>
+            </tr>
+            <tr>
+                <th>Result</th>
+                <td><textarea id="result"> </textarea></td>
+            </tr>
+
+            <tr>
+                <th></th>
+                <td><input type="submit" id="btn" value="SubmiT"></td>
+            </tr>
+        </table> -->
+        <script src="script.js"></script>
+            
+        </body>
 </html>
